Project 5 updated -- fix Task 1, 2, 3 code

--- a/Project_5/HW2_pyspark_luongcn.ipynb
+++ b/Project_5/HW2_pyspark_luongcn.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "AUTHOR: CAT LUONG (luongcn) <br>\n",
-    "DATE: 03/31/2024"
+    "**AUTHOR**: CAT LUONG (luongcn) <br>\n",
+    "**DATE**: 03/31/2024"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -66,10 +66,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x2048dd51520>"
+       "<pyspark.sql.session.SparkSession at 0x221b95a3dc0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -109,11 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_max_temp(file_1: Path, file_2: Path) -> Tuple[str, str]:   \n",
+    "def get_max_temp(file_1: Path, file_2: Path, column_name: str = 'MAX') -> Tuple[str, str]:   \n",
     "    \"\"\"\n",
     "    Task 1: Find the hottest day (column MAX) for each year, and provide the corresponding station code,\n",
     "    station name and the date (columns STATION, NAME, DATE).\n",
@@ -122,37 +122,38 @@
     "    df_pyspark_1 = spark.read.option(\"header\",\"true\").csv(str(file_1))\n",
     "    df_pyspark_2 = spark.read.option(\"header\",\"true\").csv(str(file_2))\n",
     "\n",
-    "    max_temp_df_1 = df_pyspark_1.select(['TEMP', 'STATION', 'NAME', 'DATE'])\n",
-    "    max_temp_df_2 = df_pyspark_2.select(['TEMP', 'STATION', 'NAME', 'DATE'])\n",
+    "    max_temp_df_1 = df_pyspark_1.select([column_name, 'STATION', 'NAME', 'DATE'])\n",
+    "    max_temp_df_2 = df_pyspark_2.select([column_name, 'STATION', 'NAME', 'DATE'])\n",
     "\n",
     "    combined_max_temp_df = max_temp_df_1.unionByName(max_temp_df_2)\n",
+    "    combined_max_temp_df = combined_max_temp_df.filter(col(column_name) != '9999.9')\n",
     "\n",
     "    # Initilize window specification\n",
     "    w = Window.partitionBy()\n",
     "\n",
     "    # Apply the max function using the window specification\n",
-    "    combined_max_temp_df = combined_max_temp_df.withColumn('max_temp', max(col('TEMP').cast('float')).over(w))\n",
+    "    combined_max_temp_df = combined_max_temp_df.withColumn('max_temp', max(col(column_name).cast('float')).over(w))\n",
     "\n",
     "    # Filter the DataFrame to get rows where TEMP equals max_temp\n",
-    "    filtered_df = combined_max_temp_df.filter(combined_max_temp_df['TEMP'] == combined_max_temp_df['max_temp'])\n",
+    "    filtered_df = combined_max_temp_df.filter(combined_max_temp_df[column_name] == combined_max_temp_df['max_temp'])\n",
     "\n",
     "    # Show the filtered DataFrame\n",
-    "    filtered_df.select(['TEMP', 'STATION', 'NAME', 'DATE'])\n",
+    "    filtered_df.select([column_name, 'STATION', 'NAME', 'DATE'])\n",
     "\n",
     "    filtered_df = filtered_df.collect()\n",
     "    \n",
-    "    max_val = f\"TEMP: {filtered_df[0][0]}, STATION: {filtered_df[0][1]}, NAME: {filtered_df[0][2]}, DATE: {filtered_df[0][3]}\"\n",
+    "    max_val = f\"MAX: {filtered_df[0][0]}, STATION: {filtered_df[0][1]}, NAME: {filtered_df[0][2]}, DATE: {filtered_df[0][3]}\"\n",
     "\n",
     "    return year, max_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_min_temp_jan(file_1: Path, file_2: Path) -> Tuple[str, str, float]: \n",
+    "def get_min_temp_jan(file_1: Path, file_2: Path, column_name: str = 'MIN') -> Tuple[str, str, float]: \n",
     "    \"\"\"\n",
     "    Task 2: Find the coldest day (column MIN) for the month of January across all years (2010 - 2022) ,\n",
     "    and provide the corresponding station code, station name and the date (columns STATION,\n",
@@ -162,32 +163,33 @@
     "    df_pyspark_1 = spark.read.option(\"header\",\"true\").csv(str(file_1))\n",
     "    df_pyspark_2 = spark.read.option(\"header\",\"true\").csv(str(file_2))\n",
     "\n",
-    "    max_temp_df_1 = df_pyspark_1.select(['TEMP', 'STATION', 'NAME', 'DATE'])\n",
-    "    max_temp_df_2 = df_pyspark_2.select(['TEMP', 'STATION', 'NAME', 'DATE'])\n",
+    "    max_temp_df_1 = df_pyspark_1.select([column_name, 'STATION', 'NAME', 'DATE'])\n",
+    "    max_temp_df_2 = df_pyspark_2.select([column_name, 'STATION', 'NAME', 'DATE'])\n",
     "\n",
-    "    combined_max_temp_df = max_temp_df_1.unionByName(max_temp_df_2)\n",
+    "    combined_min_temp_df = max_temp_df_1.unionByName(max_temp_df_2)\n",
+    "    combined_min_temp_df = combined_min_temp_df.filter(col(column_name) != '9999.9')\n",
     "\n",
     "    # Get the month of the date column\n",
-    "    combined_max_temp_df = combined_max_temp_df.withColumn('month', month(combined_max_temp_df['DATE']))\n",
+    "    combined_min_temp_df = combined_min_temp_df.withColumn('month', month(combined_min_temp_df['DATE']))\n",
     "\n",
     "    # Filter the DataFrame to only include rows where the month is 3\n",
-    "    combined_max_temp_df = combined_max_temp_df.filter(combined_max_temp_df['month'] == 1)\n",
+    "    combined_min_temp_df = combined_min_temp_df.filter(combined_min_temp_df['month'] == 1)\n",
     "\n",
     "    # Initilize window specification\n",
     "    w = Window.partitionBy()\n",
     "\n",
     "    # Apply the max function using the window specification\n",
-    "    combined_max_temp_df = combined_max_temp_df.withColumn('min_temp', min(col('TEMP').cast('float')).over(w))\n",
+    "    combined_min_temp_df = combined_min_temp_df.withColumn('min_temp', min(col(column_name).cast('float')).over(w))\n",
     "\n",
     "    # Filter the DataFrame to get rows where TEMP equals max_temp\n",
-    "    filtered_df = combined_max_temp_df.filter(combined_max_temp_df['TEMP'] == combined_max_temp_df['min_temp'])\n",
+    "    filtered_df = combined_min_temp_df.filter(combined_min_temp_df[column_name] == combined_min_temp_df['min_temp'])\n",
     "\n",
     "    # Show the filtered DataFrame\n",
-    "    filtered_df.select(['TEMP', 'STATION', 'NAME', 'DATE'])\n",
+    "    filtered_df.select([column_name, 'STATION', 'NAME', 'DATE'])\n",
     "\n",
     "    filtered_df = filtered_df.collect()\n",
     "    \n",
-    "    min_str = f\"TEMP: {filtered_df[0][0]}, STATION: {filtered_df[0][1]}, NAME: {filtered_df[0][2]}, DATE: {filtered_df[0][3]}\"\n",
+    "    min_str = f\"MIN: {filtered_df[0][0]}, STATION: {filtered_df[0][1]}, NAME: {filtered_df[0][2]}, DATE: {filtered_df[0][3]}\"\n",
     "    min_temp = float(filtered_df[0][0])\n",
     "    \n",
     "    return year, min_str, min_temp"
@@ -195,11 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def min_max_precipitation(file_1: Path, file_2: Path) -> Tuple[str, str]:\n",
+    "def min_max_precipitation(file_1: Path, file_2: Path, column_name: str = 'PRCP') -> Tuple[str, str]:\n",
     "    \"\"\"\n",
     "    Task 3: Maximum and Minimum precipitation (column PRCP ) for the year 2015, and provide the\n",
     "    corresponding station code, station name and the date (columns STATION, NAME, DATE).\n",
@@ -214,12 +216,13 @@
     "    w = Window.partitionBy()\n",
     "\n",
     "    combined_prcp_df = df_1.unionByName(df_2)\n",
-    "    \n",
-    "    combined_prcp_df_max = combined_prcp_df.withColumn('max_prcp', max(col('PRCP').cast('float')).over(w))\n",
-    "    max_df = combined_prcp_df_max.filter(combined_prcp_df_max['PRCP'] == combined_prcp_df_max['max_prcp']).collect()\n",
+    "    combined_prcp_df = combined_prcp_df.filter(col(column_name) != '99.99')\n",
     "\n",
-    "    combined_prcp_df_min = combined_prcp_df.withColumn('min_prcp', min(col('PRCP').cast('float')).over(w))\n",
-    "    min_df = combined_prcp_df_min.filter(combined_prcp_df_min['PRCP'] == combined_prcp_df_min['min_prcp']).collect()\n",
+    "    combined_prcp_df_max = combined_prcp_df.withColumn('max_prcp', max(col(column_name).cast('float')).over(w))\n",
+    "    max_df = combined_prcp_df_max.filter(combined_prcp_df_max[column_name] == combined_prcp_df_max['max_prcp']).collect()\n",
+    "\n",
+    "    combined_prcp_df_min = combined_prcp_df.withColumn('min_prcp', min(col(column_name).cast('float')).over(w))\n",
+    "    min_df = combined_prcp_df_min.filter(combined_prcp_df_min[column_name] == combined_prcp_df_min['min_prcp']).collect()\n",
     "\n",
     "    # Get max and min values of precipitation\n",
     "    max_val = f\"PRCP: {max_df[0][0]}, STATION: {max_df[0][1]}, NAME: {max_df[0][2]}, DATE: {max_df[0][3]}\"\n",
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,28 +326,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'2010': 'TEMP:   65.8, STATION: 99407099999, NAME: DESTRUCTION IS. WA, WA US, DATE: 2010-08-14',\n",
-       " '2011': 'TEMP:   71.2, STATION: 01046099999, NAME: SORKJOSEN, NO, DATE: 2011-07-09',\n",
-       " '2012': 'TEMP:   65.0, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2012-07-13',\n",
-       " '2013': 'TEMP:   77.9, STATION: 01001499999, NAME: SORSTOKKEN, NO, DATE: 2013-08-02',\n",
-       " '2014': 'TEMP:   76.3, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2014-07-10',\n",
-       " '2015': 'TEMP:   61.0, STATION: 01025099999, NAME: TROMSO, NO, DATE: 2015-08-11',\n",
-       " '2016': 'TEMP:   66.6, STATION: 01023199999, NAME: DRAUGEN, NO, DATE: 2016-07-21',\n",
-       " '2017': 'TEMP:   65.9, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2017-06-09',\n",
-       " '2018': 'TEMP:   72.1, STATION: 01025099999, NAME: TROMSO, NO, DATE: 2018-07-30',\n",
-       " '2019': 'TEMP:   67.0, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2019-07-21',\n",
-       " '2020': 'TEMP:   66.7, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2020-06-21',\n",
-       " '2021': 'TEMP:   77.9, STATION: 01065099999, NAME: KARASJOK, NO, DATE: 2021-07-05',\n",
-       " '2022': 'TEMP:   72.3, STATION: 02095099999, NAME: PAJALA, SW, DATE: 2022-07-01'}"
+       "{'2010': 'MAX:   74.8, STATION: 99407099999, NAME: DESTRUCTION IS. WA, WA US, DATE: 2010-08-15',\n",
+       " '2011': 'MAX:   87.8, STATION: 01046099999, NAME: SORKJOSEN, NO, DATE: 2011-07-09',\n",
+       " '2012': 'MAX:   72.0, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2012-07-05',\n",
+       " '2013': 'MAX:   80.6, STATION: 01001499999, NAME: SORSTOKKEN, NO, DATE: 2013-08-02',\n",
+       " '2014': 'MAX:   89.6, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2014-07-10',\n",
+       " '2015': 'MAX:   71.6, STATION: 01025099999, NAME: TROMSO, NO, DATE: 2015-07-30',\n",
+       " '2016': 'MAX:   77.0, STATION: 01023199999, NAME: DRAUGEN, NO, DATE: 2016-07-21',\n",
+       " '2017': 'MAX:   78.6, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2017-06-09',\n",
+       " '2018': 'MAX:   84.2, STATION: 01025099999, NAME: TROMSO, NO, DATE: 2018-07-29',\n",
+       " '2019': 'MAX:   78.8, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2019-07-21',\n",
+       " '2020': 'MAX:   79.9, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2020-06-22',\n",
+       " '2021': 'MAX:   88.3, STATION: 01065099999, NAME: KARASJOK, NO, DATE: 2021-07-05',\n",
+       " '2022': 'MAX:   85.5, STATION: 02095099999, NAME: PAJALA, SW, DATE: 2022-07-01'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,16 +358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'YEAR: 2011, TEMP:  -19.6, STATION: 01008099999, NAME: LONGYEAR, SV, DATE: 2011-01-30'"
+       "'YEAR: 2017, MIN:  -28.3, STATION: 01023099999, NAME: BARDUFOSS, NO, DATE: 2017-01-05'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,17 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['PRCP: 99.99, STATION: 01008099999, NAME: LONGYEAR, SV, DATE: 2015-11-18',\n",
+       "['PRCP:  2.11, STATION: 01025099999, NAME: TROMSO, NO, DATE: 2015-11-02',\n",
        " 'PRCP:  0.00, STATION: 01008099999, NAME: LONGYEAR, SV, DATE: 2015-01-01']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +413,7 @@
        "'Missing value percentage of GUST for 2019 is 82.87671232876713%'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +458,7 @@
        " 'December': 'Mean: 19.95483873736474, Median: 20.200000762939453, Mode: 10.199999809265137, Standard Deviation: 8.854464180955505'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,8 +498,7 @@
     "    f.write(\"Task 5: \\n\")\n",
     "    for month, val in task5_results.items():\n",
     "        f.write(f\"{month}: {val} \\n\")\n",
-    "    f.write(\"\\n\")\n",
-    "    \n"
+    "    f.write(\"\\n\")"
    ]
   }
  ],
